# Dobby

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
scripts/: install.sh
src/: display.rs  forge.rs  index.ts  main.rs  plan.rs  rule.rs  state.rs  storage.rs  task.rs  tui.rs
src/commands/: plan.ts  task.ts
src/services/: forgeRunner.ts  planService.ts  storage.ts  taskService.ts
src/types/: plan.ts
src/utils/: logger.ts
