[package]
name = "dobby-cli"
version = "0.1.0"
edition = "2021"
description = "Forge-compatible CLI with Dobby-native planning commands"
license = "ISC"
authors = ["shibinsp"]

[[bin]]
name = "dobby"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
owo-colors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
